--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Flickr</title>
     <link rel="stylesheet" type="text/css" href="flickr.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="flickr.js" language="javascript" type="text/javascript"></script>
+    <script type="text/javascript" src="flickr.js" charset="utf-8"></script>
   </head>
   <body>
     <p><button id="fuenlabrada">Fuenlabrada photos</button></p>
